# miageru

./: .gitignore  README.md  README.org  example-config.toml  pyproject.toml
src/miageru/: __main__.py  database.py  methods.py
src/miageru/test/: check_anki_connect.py  check_anki_connect_media.py  check_yad.py  test_data.py  test_tools.py
src/miageru/tools/: __init__.py  base.py  clipboard.py  dictc.py  dictp.py  googletrans.py  gtts.py  jtalk.py  kakasi.py  mecab.py  mpv.py  oggenc.py  yad.py
