[project]
name = "miageru"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brett Viren", email = "brett.viren@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "genanki>=0.13.1",
    "googletrans>=4.0.2",
    "gtts>=2.2.4",
    "pykakasi>=2.3.0",
    "pyperclip>=1.9.0",
    "sh>=2.2.2",
]

# Optional dependencies.  Without them, some features may fall back to lesser
# replacements or raise an exception.

[project.optional-dependencies]
# deep-l = [ "deepl-python>=1.15.0", ]
# pydub = [ "pydub>=0.25.1" ]
dev = [ "pytest>=8.4.1", ]
# all = [
#     "miageru[anki]",
#     "miageru[pydub]",
# ]

[project.scripts]
miageru = "miageru.__main__:cli"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"miageru" = ["data/**"]

